@@ -116,16 +116,13 @@ public class TextChoiceImportExportAndOtherDomainsTest extends TextChoiceTest
      * <p>
      *     This test will:
      *     <ul>
-     *         <li>Create a list design with a TextChoice field and optionally a MultiValueTextChoice field.</li>
+     *         <li>Create a list design with a TextChoice field and a MultiValueTextChoice field.</li>
      *         <li>Import list data in bulk.</li>
      *         <li>Add a new list item using the UI.</li>
      *     </ul>
      * </p>
-     *
-     * @param includeMvtc If true, include a {@link FieldDefinition.ColumnType#MultiValueTextChoice} field
-     *                    in the list and populate it. Only supported on PostgreSQL.
      */
-    private void verifyTextChoiceInList(boolean includeMvtc)
+    private void verifyTextChoiceInList()
     {
 
         FieldDefinition tcField = new FieldDefinition(LIST_TC_FIELD, FieldDefinition.ColumnType.TextChoice);
@@ -134,23 +131,13 @@ public class TextChoiceImportExportAndOtherDomainsTest extends TextChoiceTest
         FieldDefinition txtField = new FieldDefinition(LIST_TEXT_FIELD, FieldDefinition.ColumnType.String);
 
         final String allMVTCValues = StringUtils.join(LIST_MVTC_VALUES, ", ");
-        if (includeMvtc)
-        {
-            FieldDefinition mvtcField = new FieldDefinition(LIST_MVTC_FIELD, FieldDefinition.ColumnType.MultiValueTextChoice);
-            mvtcField.setMultiChoiceValues(LIST_MVTC_VALUES);
+        FieldDefinition mvtcField = new FieldDefinition(LIST_MVTC_FIELD, FieldDefinition.ColumnType.MultiValueTextChoice);
+        mvtcField.setMultiChoiceValues(LIST_MVTC_VALUES);
 
-            log(String.format("Create a list named '%s' with a string field '%s', a TextChoice field '%s', and a MultiValueTextChoice field '%s'.",
-                    LIST_NAME, LIST_TEXT_FIELD, LIST_TC_FIELD, LIST_MVTC_FIELD));
+        log(String.format("Create a list named '%s' with a string field '%s', a TextChoice field '%s', and a MultiValueTextChoice field '%s'.",
+                LIST_NAME, LIST_TEXT_FIELD, LIST_TC_FIELD, LIST_MVTC_FIELD));
 
-            _listHelper.createList(getCurrentContainerPath(), LIST_NAME, "Key", tcField, txtField, mvtcField);
-        }
-        else
-        {
-            log(String.format("Create a list named '%s' with a string field '%s' and a TextChoice field '%s'.",
-                    LIST_NAME, LIST_TEXT_FIELD, LIST_TC_FIELD));
-
-            _listHelper.createList(getCurrentContainerPath(), LIST_NAME, "Key", tcField, txtField);
-        }
+        _listHelper.createList(getCurrentContainerPath(), LIST_NAME, "Key", tcField, txtField, mvtcField);
 
         log("Bulk upload data into the list.");
 
@@ -160,23 +147,11 @@ public class TextChoiceImportExportAndOtherDomainsTest extends TextChoiceTest
         listData.add(Map.of(LIST_TC_FIELD, LIST_VALUES.get(2), LIST_TEXT_FIELD, "Is"));
 
         StringBuilder sb = new StringBuilder();
-        if (includeMvtc)
+        sb.append(String.format("%s\t%s\t%s\n", LIST_TC_FIELD, LIST_TEXT_FIELD, LIST_MVTC_FIELD));
+        for (Map<String, String> row : listData)
         {
-            sb.append(String.format("%s\t%s\t%s\n", LIST_TC_FIELD, LIST_TEXT_FIELD, LIST_MVTC_FIELD));
-            for (int i = 0; i < listData.size(); i++)
-            {
-                Map<String, String> row = listData.get(i);
-                sb.append(String.format("%s\t%s\t%s\n", row.get(LIST_TC_FIELD), row.get(LIST_TEXT_FIELD), allMVTCValues));
-                listMvtcData.add(LIST_MVTC_VALUES);
-            }
-        }
-        else
-        {
-            sb.append(String.format("%s\t%s\n", LIST_TC_FIELD, LIST_TEXT_FIELD));
-            for (Map<String, String> row : listData)
-            {
-                sb.append(String.format("%s\t%s\n", row.get(LIST_TC_FIELD), row.get(LIST_TEXT_FIELD)));
-            }
+            sb.append(String.format("%s\t%s\t%s\n", row.get(LIST_TC_FIELD), row.get(LIST_TEXT_FIELD), allMVTCValues));
+            listMvtcData.add(LIST_MVTC_VALUES);
         }
 
         _listHelper.uploadData(sb.toString());
@@ -186,8 +161,7 @@ public class TextChoiceImportExportAndOtherDomainsTest extends TextChoiceTest
         // Add the new row to the expected data.
         listData.add(newRow);
 
-        if (includeMvtc)
-            listMvtcData.add(List.of()); // No MVTC value for the UI-inserted row.
+        listMvtcData.add(List.of()); // No MVTC value for the UI-inserted row.
 
         log("Add a new row to the list using the UI.");
         _listHelper.insertNewRow(newRow);
@@ -260,8 +234,6 @@ public class TextChoiceImportExportAndOtherDomainsTest extends TextChoiceTest
     @Test
     public void testOtherDomainsExportAndImport() throws IOException, CommandException
     {
-        boolean isPg = WebTestHelper.getDatabaseType() == WebTestHelper.DatabaseType.PostgreSQL;
-
         goToProjectHome();
 
         log("Create a sample type, assay design and an assay run. These will be used to validate export/import.");
@@ -274,7 +246,7 @@ public class TextChoiceImportExportAndOtherDomainsTest extends TextChoiceTest
         Map<String, String> assayResultRowData = createAssayRun();
 
         log("Create a list with a TextChoice field. The list will also be validated after import.");
-        verifyTextChoiceInList(isPg);
+        verifyTextChoiceInList();
 
         log("Create an issue design with a TextChoice field and create an issue that uses it. Issue designs are not exported.");
         verifyTextChoiceInIssueDesign();
@@ -308,10 +280,7 @@ public class TextChoiceImportExportAndOtherDomainsTest extends TextChoiceTest
 
         Connection cn = WebTestHelper.getRemoteApiConnection();
         SelectRowsCommand cmd = new SelectRowsCommand("lists", LIST_NAME);
-        List<String> selectColumns = new ArrayList<>(Arrays.asList(LIST_TC_FIELD, LIST_TEXT_FIELD));
-        if (isPg)
-            selectColumns.add(LIST_MVTC_FIELD);
-        cmd.setColumns(selectColumns);
+        cmd.setColumns(List.of(LIST_TC_FIELD, LIST_TEXT_FIELD, LIST_MVTC_FIELD));
 
         SelectRowsResponse response = cmd.execute(cn, getCurrentContainerPath());
 
@@ -323,21 +292,17 @@ public class TextChoiceImportExportAndOtherDomainsTest extends TextChoiceTest
                     Map.of(LIST_TC_FIELD, row.get(LIST_TC_FIELD).toString(),
                             LIST_TEXT_FIELD, row.get(LIST_TEXT_FIELD).toString()));
 
-            if (isPg)
-            {
-                Object mvtcRaw = row.get(LIST_MVTC_FIELD);
-                List<String> mvtcValues = mvtcRaw instanceof List<?> list
-                        ? list.stream().map(Object::toString).toList()
-                        : List.of();
-                importedListMvtcData.add(mvtcValues);
-            }
+            Object mvtcRaw = row.get(LIST_MVTC_FIELD);
+            List<String> mvtcValues = mvtcRaw instanceof List<?> list
+                    ? list.stream().map(Object::toString).toList()
+                    : List.of();
+            importedListMvtcData.add(mvtcValues);
         }
 
         checker().withScreenshot("Imported_List_Error")
                 .verifyEquals("Imported data for the list not as expected.", listData, importedListData);
 
-        if (isPg)
-            checker().verifyEquals("Imported MultiValueTextChoice data for the list not as expected.", listMvtcData, importedListMvtcData);
+        checker().verifyEquals("Imported MultiValueTextChoice data for the list not as expected.", listMvtcData, importedListMvtcData);
 
         log("Validate the assay data.");
         goToProjectHome(IMPORTED_PROJ_NAME);
